<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:background="@color/primary_background">

    <ImageView
        android:id="@+id/ivTodayLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/today_list_logo"
        android:foreground="@drawable/rounded_corner_image_view"
        android:src="@drawable/ic_today_list_logo" />

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/oitEmail"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:hint="@string/email"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/ivTodayLogo"
    android:layout_marginTop="30dp">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"

        tools:ignore="TextContrastCheck" />

</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/oitPassword"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:hint="@string/password"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/oitEmail"
    android:layout_marginTop="20dp"
    app:passwordToggleEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"

        android:textColorHint="#795548"
        tools:ignore="TextContrastCheck" />

</com.google.android.material.textfield.TextInputLayout>

<Button
    android:id="@+id/btnSignIn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/oitPassword"
    android:layout_marginHorizontal="100dp"
    android:layout_marginTop="10dp"
    android:backgroundTint="@color/primaryColor"
    android:text="@string/sign_in"
    android:textColor="@color/primaryTextColor"/>

<TextView
    android:id="@+id/tvSignUpMessage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/meed_an_account"
    android:textColor="@color/primaryTextColor"
    android:layout_below="@+id/btnSignIn"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="7dp"
    android:textStyle="italic"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/btnSignIn"
    android:layout_marginStart="6dp"
    android:layout_marginTop="7dp"
    android:layout_toEndOf="@+id/tvSignUpMessage"
    android:text="@string/sign_up"
    android:textColor="@color/primaryDarkColor"
    android:textStyle="bold" />


</RelativeLayout>